added 4th col to qualification tables for prov:agent, prov:entity, prov:activity

--- a/components/services/prov-o/includes/at-a-glance-collections.html
+++ b/components/services/prov-o/includes/at-a-glance-collections.html
@@ -30,6 +30,9 @@
      class="prov-collections owl-properties at-a-glance">
   <ul class="hlist">
     <li class="object-property">
+      <a href="#collection">prov:collection</a>
+    </li>
+    <li class="object-property">
       <a href="#derivedByInsertionFrom">prov:derivedByInsertionFrom</a>
     </li>
     <li class="object-property">
@@ -52,6 +55,9 @@
     </li>
     <li class="object-property">
       <a href="#qualifiedRemoval">prov:qualifiedRemoval</a>
+    </li>
+    <li class="datatype-property">
+      <a href="#removedKey">prov:removedKey</a>
     </li>
     <li class="object-property">
       <a href="#value">prov:value</a>
