--- a/components/services/prov-o/includes/qualifed-forms-expanded.html
+++ b/components/services/prov-o/includes/qualifed-forms-expanded.html
@@ -1,38 +1,45 @@
 <table class="qualified-forms">
-  <caption>Qualification Property and Involvement Class used to qualify a Expanded Property.</caption>
+  <caption>Qualification Property and Involvement Class used to qualify an Expanded Property.</caption>
   <tr>
     <th>Expanded Property</th>
     <th>Qualification Property</th>
     <th>Involvement Class</th>
+    <th>Object Property</th>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource" class="owlclass">prov:hadOriginalSource</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedSource" href="#qualifiedSource" class="owlclass">prov:qualifiedSource</a></td>
+    <td><a title="http://www.w3.org/ns/prov#hadOriginalSource" href="#hadOriginalSource" class="owlproperty">prov:hadOriginalSource</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedSource" href="#qualifiedSource" class="owlproperty">prov:qualifiedSource</a></td>
     <td><a title="http://www.w3.org/ns/prov#Source" href="#Source" class="owlclass">prov:Source</a></td>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlclass">prov:tracedTo</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedTrace" href="#qualifiedTrace" class="owlclass">prov:qualifiedTrace</a></td>
+    <td><a title="http://www.w3.org/ns/prov#tracedTo" href="#tracedTo" class="owlproperty">prov:tracedTo</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedTrace" href="#qualifiedTrace" class="owlproperty">prov:qualifiedTrace</a></td>
     <td><a title="http://www.w3.org/ns/prov#Trace" href="#Trace" class="owlclass">prov:Trace</a></td>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlclass">prov:wasEndedBy</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd" class="owlclass">prov:qualifiedEnd</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasEndedBy" href="#wasEndedBy" class="owlproperty">prov:wasEndedBy</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedEnd" href="#qualifiedEnd" class="owlproperty">prov:qualifiedEnd</a></td>
     <td><a title="http://www.w3.org/ns/prov#End" href="#End" class="owlclass">prov:End</a></td>
+    <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom" class="owlclass">prov:wasQuotedFrom</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedQuotation" href="#qualifiedQuotation" class="owlclass">prov:qualifiedQuotation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasQuotedFrom" href="#wasQuotedFrom" class="owlproperty">prov:wasQuotedFrom</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedQuotation" href="#qualifiedQuotation" class="owlproperty">prov:qualifiedQuotation</a></td>
     <td><a title="http://www.w3.org/ns/prov#Quotation" href="#Quotation" class="owlclass">prov:Quotation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf" class="owlclass">prov:wasRevisionOf</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedRevision" href="#qualifiedRevision" class="owlclass">prov:qualifiedRevision</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasRevisionOf" href="#wasRevisionOf" class="owlproperty">prov:wasRevisionOf</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedRevision" href="#qualifiedRevision" class="owlproperty">prov:qualifiedRevision</a></td>
     <td><a title="http://www.w3.org/ns/prov#Revision" href="#Revision" class="owlclass">prov:Revision</a></td>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlclass">prov:wasStartedBy</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedStart" href="#qualifiedStart" class="owlclass">prov:qualifiedStart</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasStartedBy" href="#wasStartedBy" class="owlproperty">prov:wasStartedBy</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedStart" href="#qualifiedStart" class="owlproperty">prov:qualifiedStart</a></td>
     <td><a title="http://www.w3.org/ns/prov#Start" href="#Start" class="owlclass">prov:Start</a></td>
+    <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
   </tr>
 </table>
