--- a/components/services/prov-o/includes/qualifed-forms-qualified.html
+++ b/components/services/prov-o/includes/qualifed-forms-qualified.html
@@ -4,5 +4,6 @@
     <th>Qualified Property</th>
     <th>Qualification Property</th>
     <th>Involvement Class</th>
+    <th>Object Property</th>
   </tr>
 </table>
