--- a/components/services/prov-o/includes/qualifed-forms-starting-point.html
+++ b/components/services/prov-o/includes/qualifed-forms-starting-point.html
@@ -4,45 +4,54 @@
     <th>Starting-point Property</th>
     <th>Qualification Property</th>
     <th>Involvement Class</th>
+    <th>Object Property</th>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlclass">prov:actedOnBehalfOf</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedResponsibility" href="#qualifiedResponsibility" class="owlclass">prov:qualifiedResponsibility</a></td>
+    <td><a title="http://www.w3.org/ns/prov#actedOnBehalfOf" href="#actedOnBehalfOf" class="owlproperty">prov:actedOnBehalfOf</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedResponsibility" href="#qualifiedResponsibility" class="owlproperty">prov:qualifiedResponsibility</a></td>
     <td><a title="http://www.w3.org/ns/prov#Responsibility" href="#Responsibility" class="owlclass">prov:Responsibility</a></td>
+    <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#used" href="#used" class="owlclass">prov:used</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedUsage" href="#qualifiedUsage" class="owlclass">prov:qualifiedUsage</a></td>
+    <td><a title="http://www.w3.org/ns/prov#used" href="#used" class="owlproperty">prov:used</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedUsage" href="#qualifiedUsage" class="owlproperty">prov:qualifiedUsage</a></td>
     <td><a title="http://www.w3.org/ns/prov#Usage" href="#Usage" class="owlclass">prov:Usage</a></td>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlclass">prov:wasAssociatedWith</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedAssociation" href="#qualifiedAssociation" class="owlclass">prov:qualifiedAssociation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasAssociatedWith" href="#wasAssociatedWith" class="owlproperty">prov:wasAssociatedWith</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedAssociation" href="#qualifiedAssociation" class="owlproperty">prov:qualifiedAssociation</a></td>
     <td><a title="http://www.w3.org/ns/prov#Association" href="#Association" class="owlclass">prov:Association</a></td>
+    <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo" class="owlclass">prov:wasAttributedTo</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedAttribution" href="#qualifiedAttribution" class="owlclass">prov:qualifiedAttribution</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasAttributedTo" href="#wasAttributedTo" class="owlproperty">prov:wasAttributedTo</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedAttribution" href="#qualifiedAttribution" class="owlproperty">prov:qualifiedAttribution</a></td>
     <td><a title="http://www.w3.org/ns/prov#Attribution" href="#Attribution" class="owlclass">prov:Attribution</a></td>
+    <td><a title="http://www.w3.org/ns/prov#agent" href="#agent" class="owlproperty">prov:agent</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasDerivedFrom" href="#wasDerivedFrom" class="owlclass">prov:wasDerivedFrom</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedDerivation" href="#qualifiedDerivation" class="owlclass">prov:qualifiedDerivation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasDerivedFrom" href="#wasDerivedFrom" class="owlproperty">prov:wasDerivedFrom</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedDerivation" href="#qualifiedDerivation" class="owlproperty">prov:qualifiedDerivation</a></td>
     <td><a title="http://www.w3.org/ns/prov#Derivation" href="#Derivation" class="owlclass">prov:Derivation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#entity" href="#entity" class="owlproperty">prov:entity</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlclass">prov:wasGeneratedBy</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedGeneration" href="#qualifiedGeneration" class="owlclass">prov:qualifiedGeneration</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasGeneratedBy" href="#wasGeneratedBy" class="owlproperty">prov:wasGeneratedBy</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedGeneration" href="#qualifiedGeneration" class="owlproperty">prov:qualifiedGeneration</a></td>
     <td><a title="http://www.w3.org/ns/prov#Generation" href="#Generation" class="owlclass">prov:Generation</a></td>
+    <td><a title="http://www.w3.org/ns/prov#activity" href="#activity" class="owlproperty">prov:activity</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlclass">prov:wasInformedBy</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedCommunication" href="#qualifiedCommunication" class="owlclass">prov:qualifiedCommunication</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasInformedBy" href="#wasInformedBy" class="owlproperty">prov:wasInformedBy</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedCommunication" href="#qualifiedCommunication" class="owlproperty">prov:qualifiedCommunication</a></td>
     <td><a title="http://www.w3.org/ns/prov#Communication" href="#Communication" class="owlclass">prov:Communication</a></td>
+    <td><a title="http://www.w3.org/ns/prov#activity" href="#activity" class="owlproperty">prov:activity</a></td>
   </tr>
   <tr>
-    <td><a title="http://www.w3.org/ns/prov#wasStartedByActivity" href="#wasStartedByActivity" class="owlclass">prov:wasStartedByActivity</a></td>
-    <td><a title="http://www.w3.org/ns/prov#qualifiedStartByActivity" href="#qualifiedStartByActivity" class="owlclass">prov:qualifiedStartByActivity</a></td>
+    <td><a title="http://www.w3.org/ns/prov#wasStartedByActivity" href="#wasStartedByActivity" class="owlproperty">prov:wasStartedByActivity</a></td>
+    <td><a title="http://www.w3.org/ns/prov#qualifiedStartByActivity" href="#qualifiedStartByActivity" class="owlproperty">prov:qualifiedStartByActivity</a></td>
     <td><a title="http://www.w3.org/ns/prov#StartByActivity" href="#StartByActivity" class="owlclass">prov:StartByActivity</a></td>
+    <td><a title="http://www.w3.org/ns/prov#activity" href="#activity" class="owlproperty">prov:activity</a></td>
   </tr>
 </table>
