--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -40,7 +40,7 @@
           activity was started or triggered by another activity. 
          </p> 
 
-        <div class="issue">
+        <!--div class="issue">
            Luc has general comments in <a href="http://www.w3.org/2011/prov/track/issues/117">ISSUE-117</a>
         </div>
         <div class="issue">
@@ -57,7 +57,7 @@
         </div>
         <div class="issue">
            Conforming to W3C Style guides <a href="http://www.w3.org/2011/prov/track/issues/308">ISSUE-308</a>
-        </div>
+        </div-->
 
 
         <div class="exampleOuter">
