--- a/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
+++ b/components/services/prov-o/prov-o-html-sections/description-starting-points.inc.html
@@ -69,13 +69,11 @@
       <p>The example states that the agent <code>ex:derek</code> was associated with two 
       activities: <code>ex:aggregationActivity</code> and <code>ex:illustrationActivity</code>. The 
       activity <code>ex:aggregationActivity</code> used 
-      the entity <code>ex:crimeData</code> (a crime statistics dataset) and the
-       entity <code>ex:nationalRegionsList</code> (a list of national regions), and 
+      the entities <code>ex:crimeData</code> (a crime statistics dataset) and <code>ex:nationalRegionsList</code> (a list of national regions), and 
       generated a new entity, <code>ex:aggregatedByRegions</code>, that aggregates the statistics in
-       <code>ex:dataset1</code> according to the regions in <code>ex:nationalRegionsList</code>. The entity 
-      <code>ex:aggregate</code>; was then used by the <code>ex:IllustrationActivity</code> activity, 
-      which generated a new entity, <code>ex:chart1</code>, a chart that depicts the 
-      statistics in <code>ex:aggregatedByRegions</code>.
+       <code>ex:crimeData</code> according to the regions in <code>ex:nationalRegionsList</code>. 
+      The <code>ex:aggregatedByRegions</code> entity was then used by the <code>ex:illustrationActivity</code> activity, 
+      to generate a new entity <code>ex:chart1</code> that depicts the aggregated statistics.
       </p>
 
       <p> The example also states that the activity <code>ex:illustrationActivity</code> was 
