--- a/components/services/prov-o/includes/cross-reference-expanded.html
+++ b/components/services/prov-o/includes/cross-reference-expanded.html
@@ -8,7 +8,9 @@
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#Account</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Account</p>
+    <div class="definition"><p>An account is any mechanism by which a set of provenance descriptions can be bundled up and named.</p>
+    </div>
     <div class="comment"><p>Note that there are kinds of accounts (e.g. handwritten letters, audio recordings, etc.) that are not expressed in PROV-O, but can be still be described by PROV-O.</p>
     </div>
     <dl class="description">
@@ -26,7 +28,9 @@
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#Location</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Location</p>
+    <div class="definition"><p>A location can be an identifiable geographic place (ISO 19112), but it can also be a non-geographic place such as a directory, row, or column. As such, there are numerous ways in which location can be expressed, such as by a coordinate, address, landmark, and so forth.</p>
+    </div>
     <dl class="description">
       <dt>in range of</dt>
       <dd>
@@ -43,7 +47,9 @@
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#Note</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Note</p>
+    <div class="definition"><p>Attribute-value pairs occurring in notes are application specific.</p>
+    </div>
     <dl class="description">
       <dt>in PROV component</dt>
       <dd class="component-annotations">
@@ -64,7 +70,9 @@
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#Organization</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Organization</p>
+    <div class="definition"><p>Agents of type Organization are social institutions such as companies, societies etc.</p>
+    </div>
     <dl class="description">
       <dt>in PROV component</dt>
       <dd class="component-agents-responsibility">
@@ -84,7 +92,9 @@
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#Person</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#Person</p>
+    <div class="definition"><p>Agents of type Person are people.</p>
+    </div>
     <dl class="description">
       <dt>in PROV component</dt>
       <dd class="component-agents-responsibility">
@@ -104,7 +114,9 @@
          back to <a href="#prov-expanded-owl-classes-at-a-glance">expanded classes</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#SoftwareAgent</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#SoftwareAgent</p>
+    <div class="definition"><p>A software agent is running software.</p>
+    </div>
     <dl class="description">
       <dt>in PROV component</dt>
       <dd class="component-agents-responsibility">
@@ -127,7 +139,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#alternateOf</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#alternateOf</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-alternate">
@@ -162,7 +174,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#generated</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#generated</p>
     <div class="description">
     <div class="comment"><p>This inverse of prov:wasGeneratedBy is defined so that Activities being described can reference their generated outputs directly without needing to 'stop' and start describing the Entity. This helps 'Activity-centric' modeling as opposed to 'Entity-centric' modeling.</p>
     </div>
@@ -215,7 +227,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#hadLocation</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#hadLocation</p>
     <div class="description">
     <div class="comment"><p>Location is an optional attribute of Entity and Activity.</p>
     </div>
@@ -244,7 +256,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#hadOriginalSource</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#hadOriginalSource</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-derivations">
@@ -287,7 +299,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#hasAnnotation</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#hasAnnotation</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-annotations">
@@ -314,7 +326,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#specializationOf</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#specializationOf</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-alternate">
@@ -349,7 +361,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#tracedTo</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#tracedTo</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-derivations">
@@ -406,7 +418,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#wasEndedBy</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasEndedBy</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-entities-activities">
@@ -441,7 +453,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#wasQuotedFrom</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasQuotedFrom</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-derivations">
@@ -484,7 +496,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#wasRevisionOf</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasRevisionOf</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-derivations">
@@ -527,7 +539,7 @@
          back to <a href="#prov-expanded-owl-properties-at-a-glance">expanded properties</a>
       </span>
     </h3>
-    <p><strong>IRI:</strong>http://www.w3.org/ns/prov#wasStartedBy</p>
+    <p><strong>IRI:</strong> http://www.w3.org/ns/prov#wasStartedBy</p>
     <div class="description">
       <dt>in PROV component</dt>
       <dd class="component-entities-activities">
